fixed address alignment

--- a/main.css
+++ b/main.css
@@ -81,7 +81,7 @@
     animation-iteration-count: 1;
 }
 
-.floatingDiv {
+.fa fa-exclamation-triangle {
 	text-align: right;
 }
 
